minor: fix hyperlink in navbar

--- a/7.0.0-beta2/navlinks.html
+++ b/7.0.0-beta2/navlinks.html
@@ -1,7 +1,7 @@
 <div class="navbar__links">
 	<!-- Intro -->
 	<div class="navbar__item">
-		<a href="/docs/">Home</a>
+		<a href="/7.0.0-beta2/">Home</a>
 	</div>
 	<!-- Learning -->
 	<div class="navbar__item">
