minor: fix versioned doc links

--- a/7.0.0-beta2/contact.html
+++ b/7.0.0-beta2/contact.html
@@ -14,8 +14,9 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
 		<meta name="apple-mobile-web-app-title" content="Docs" />
 		<link rel="manifest" href="favicon/site.webmanifest" />
+	</head>
 	<body>
-	<!------------  NAV  ------------>
+<!------------  NAV  ------------>
 <nav class="navbar">
 	<input id="menu-toggle" type="checkbox" hidden />
 	<div class="navbar__row">
@@ -267,25 +268,25 @@
 			<!-- Version / Actions -->
 			<select id="version-select" class="version-select" aria-label="Select version">
 				<option selected value="this">7.0.0-beta2</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.4.0/docs/">6.4</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.3.0/docs/">6.3.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.2.2/docs/">6.2.2</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.1.1/docs/">6.1.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.0.4/docs/">6.0.4</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.0-BETA1/docs/">6.0beta</option>
-				<option value="https://ccl.northwestern.edu/netlogo/5.3.1/docs/">5.3.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/5.2.1/docs/">5.2.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/5.1.0/docs/">5.1.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/5.0/docs/">5.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/4.1/docs/">4.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/4.0/docs/">4.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/3.1/docs/">3.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/3.0/docs/">3.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/2.1/docs/">2.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/2.0/docs/">2.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/1.2/docs/">1.2</option>
-				<option value="https://ccl.northwestern.edu/netlogo/1.1/docs/">1.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/1.0/docs/">1.0</option>
+				<option value="6.4.0">6.4</option>
+				<option value="6.3.0">6.3.0</option>
+				<option value="6.2.2">6.2.2</option>
+				<option value="6.1.1">6.1.1</option>
+				<option value="6.0.4">6.0.4</option>
+				<option value="6.0-BETA1">6.0beta</option>
+				<option value="5.3.1">5.3.1</option>
+				<option value="5.2.1">5.2.1</option>
+				<option value="5.1.0">5.1.0</option>
+				<option value="5.0">5.0</option>
+				<option value="4.1">4.1</option>
+				<option value="4.0">4.0</option>
+				<option value="3.1">3.1</option>
+				<option value="3.0">3.0</option>
+				<option value="2.1">2.1</option>
+				<option value="2.0">2.0</option>
+				<option value="1.2">1.2</option>
+				<option value="1.1">1.1</option>
+				<option value="1.0">1.0</option>
 			</select>
 			<button class="navbar__action hidden" id="searchBtn" aria-label="Search (⌘K)">
 				<!-- Search icon -->
@@ -484,7 +485,7 @@ our staff and our various research activities.</p>
 or try this group:
 <a href="http://groups.google.com/d/forum/netlogo-users" target="_blank">http://groups.google.com/d/forum/netlogo-users</a>.</p>
 <p>If you have feedback, suggestions, or questions, you may write us at
-<a href="&#109;&#x61;&#105;&#108;&#116;o&#58;f&#x65;&#101;d&#98;a&#x63;&#107;&#64;cc&#x6c;&#46;&#110;&#x6f;&#x72;&#x74;&#x68;&#x77;&#x65;s&#116;er&#x6e;&#x2e;ed&#x75;">f&#101;&#x65;&#x64;&#x62;&#97;&#x63;&#x6b;&#x40;&#99;&#99;&#108;&#46;n&#x6f;rt&#x68;&#119;e&#115;t&#101;&#x72;&#110;&#x2e;&#x65;&#100;&#x75;</a>.</p>
+<a href="&#x6d;&#97;&#105;&#108;&#x74;&#111;&#x3a;f&#x65;&#101;&#100;&#98;&#x61;&#x63;&#x6b;&#x40;&#99;&#x63;&#108;&#x2e;&#110;&#x6f;&#114;t&#x68;&#x77;e&#x73;t&#x65;&#x72;&#x6e;&#46;&#101;&#100;&#117;">&#102;e&#x65;&#100;&#98;a&#x63;k&#64;&#99;&#x63;&#108;&#x2e;&#x6e;&#111;rt&#x68;&#119;e&#x73;&#x74;&#x65;&#x72;&#110;&#x2e;&#x65;du</a>.</p>
 <h2><a href="#reporting-bugs" id="reporting-bugs" class="section-anchor">Reporting bugs</a></h2>
 <p>Our public bug tracker is on GitHub at
 <a href="https://github.com/NetLogo/NetLogo/issues" target="_blank">https://github.com/NetLogo/NetLogo/issues</a>.
@@ -505,7 +506,7 @@ clicking the System tab.</li>
 message into your email, or make a screen capture if you are unable to copy
 and paste.</li>
 </ul>
-<p>We also accept bug reports by email at <a href="ma&#x69;l&#116;o:&#x62;&#117;&#x67;s&#64;&#99;&#x63;&#x6c;&#46;&#x6e;o&#114;&#116;&#104;&#x77;e&#115;&#x74;&#101;&#x72;&#x6e;&#x2e;&#101;&#100;&#117;">bu&#103;s&#64;&#x63;&#x63;&#x6c;&#46;&#x6e;&#111;&#114;&#116;&#x68;&#119;es&#x74;e&#114;&#110;&#x2e;&#101;d&#x75;</a>.</p>
+<p>We also accept bug reports by email at <a href="m&#x61;&#x69;&#x6c;&#x74;&#111;&#58;&#98;&#117;&#103;&#x73;&#64;&#x63;&#99;&#x6c;&#x2e;&#x6e;&#x6f;&#x72;&#116;&#104;&#119;&#101;&#115;&#116;&#101;r&#x6e;&#46;e&#100;&#x75;">&#98;&#117;&#103;&#115;&#x40;&#x63;&#x63;&#108;&#x2e;n&#111;rt&#104;&#119;&#x65;&#x73;&#x74;&#x65;&#x72;n&#46;&#101;&#x64;&#x75;</a>.</p>
 <h2><a href="#open-source" id="open-source" class="section-anchor">Open source</a></h2>
 <p>NetLogo is free, open source software. The source code is hosted at
 <a href="https://github.com/NetLogo/NetLogo" target="_blank">https://github.com/NetLogo/NetLogo</a>. Contributions from interested users are
