--- a/7.0.0-beta2/faq.html
+++ b/7.0.0-beta2/faq.html
@@ -43,8 +43,9 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
 		<meta name="apple-mobile-web-app-title" content="Docs" />
 		<link rel="manifest" href="favicon/site.webmanifest" />
+	</head>
 	<body>
-	<!------------  NAV  ------------>
+<!------------  NAV  ------------>
 <nav class="navbar">
 	<input id="menu-toggle" type="checkbox" hidden />
 	<div class="navbar__row">
@@ -296,25 +297,25 @@
 			<!-- Version / Actions -->
 			<select id="version-select" class="version-select" aria-label="Select version">
 				<option selected value="this">7.0.0-beta2</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.4.0/docs/">6.4</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.3.0/docs/">6.3.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.2.2/docs/">6.2.2</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.1.1/docs/">6.1.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.0.4/docs/">6.0.4</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.0-BETA1/docs/">6.0beta</option>
-				<option value="https://ccl.northwestern.edu/netlogo/5.3.1/docs/">5.3.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/5.2.1/docs/">5.2.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/5.1.0/docs/">5.1.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/5.0/docs/">5.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/4.1/docs/">4.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/4.0/docs/">4.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/3.1/docs/">3.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/3.0/docs/">3.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/2.1/docs/">2.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/2.0/docs/">2.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/1.2/docs/">1.2</option>
-				<option value="https://ccl.northwestern.edu/netlogo/1.1/docs/">1.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/1.0/docs/">1.0</option>
+				<option value="6.4.0">6.4</option>
+				<option value="6.3.0">6.3.0</option>
+				<option value="6.2.2">6.2.2</option>
+				<option value="6.1.1">6.1.1</option>
+				<option value="6.0.4">6.0.4</option>
+				<option value="6.0-BETA1">6.0beta</option>
+				<option value="5.3.1">5.3.1</option>
+				<option value="5.2.1">5.2.1</option>
+				<option value="5.1.0">5.1.0</option>
+				<option value="5.0">5.0</option>
+				<option value="4.1">4.1</option>
+				<option value="4.0">4.0</option>
+				<option value="3.1">3.1</option>
+				<option value="3.0">3.0</option>
+				<option value="2.1">2.1</option>
+				<option value="2.0">2.0</option>
+				<option value="1.2">1.2</option>
+				<option value="1.1">1.1</option>
+				<option value="1.0">1.0</option>
 			</select>
 			<button class="navbar__action hidden" id="searchBtn" aria-label="Search (⌘K)">
 				<!-- Search icon -->
@@ -652,7 +653,7 @@ colored blocks.</p>
 or (at your option) any later version.</p>
 <p>Commercial licenses are also available. To inquire about commercial licenses,
 please contact Uri Wilensky at
-<a href="mailto:netlogo-commercial-admin@ccl.northwestern.edu"><a href="&#x6d;&#97;i&#x6c;&#116;o&#x3a;&#x6e;&#101;&#x74;&#108;o&#103;o-c&#x6f;&#x6d;&#x6d;e&#114;c&#105;&#x61;&#x6c;&#x2d;&#x61;dmin&#x40;&#x63;&#x63;l&#x2e;&#110;&#111;r&#x74;&#x68;&#119;&#x65;s&#x74;&#x65;&#x72;&#x6e;&#x2e;&#x65;&#100;&#117;">&#110;&#x65;&#116;&#x6c;&#x6f;g&#111;-&#99;&#x6f;&#109;m&#x65;&#114;&#x63;&#x69;&#x61;&#x6c;&#45;&#x61;&#x64;&#109;&#105;&#110;&#64;&#x63;&#x63;&#x6c;.&#110;&#111;&#x72;th&#x77;e&#x73;&#x74;&#x65;&#x72;&#x6e;&#46;&#101;d&#x75;</a></a>.</p>
+<a href="mailto:netlogo-commercial-admin@ccl.northwestern.edu"><a href="&#x6d;&#x61;&#105;&#108;t&#x6f;&#x3a;&#x6e;&#101;&#116;&#108;&#x6f;&#x67;&#x6f;-&#99;&#111;&#109;&#109;&#x65;&#114;&#x63;i&#97;&#108;-&#x61;d&#x6d;&#x69;n&#64;&#99;&#99;&#x6c;&#x2e;n&#x6f;&#x72;&#x74;&#104;we&#115;&#116;e&#114;n&#46;e&#100;&#x75;">n&#x65;t&#x6c;&#x6f;&#103;o&#x2d;&#99;&#111;&#x6d;m&#x65;r&#x63;i&#x61;&#x6c;&#45;&#97;&#x64;&#x6d;&#x69;n&#x40;&#x63;cl.&#110;&#111;r&#x74;&#104;&#x77;&#101;&#x73;t&#101;&#x72;&#x6e;&#x2e;&#x65;&#100;&#117;</a></a>.</p>
 <p>The source code is
 <a href="https://github.com/NetLogo/NetLogo" target="_blank">on GitHub, here</a>. Development discussion is
 on the <a href="https://groups.google.com/group/netlogo-devel" target="_blank">netlogo-devel</a> group.</p>
