--- a/7.0.0-beta2/index.html
+++ b/7.0.0-beta2/index.html
@@ -29,8 +29,9 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
 		<meta name="apple-mobile-web-app-title" content="Docs" />
 		<link rel="manifest" href="favicon/site.webmanifest" />
+	</head>
 	<body>
-	<!------------  NAV  ------------>
+<!------------  NAV  ------------>
 <nav class="navbar">
 	<input id="menu-toggle" type="checkbox" hidden />
 	<div class="navbar__row">
@@ -282,25 +283,25 @@
 			<!-- Version / Actions -->
 			<select id="version-select" class="version-select" aria-label="Select version">
 				<option selected value="this">7.0.0-beta2</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.4.0/docs/">6.4</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.3.0/docs/">6.3.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.2.2/docs/">6.2.2</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.1.1/docs/">6.1.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.0.4/docs/">6.0.4</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.0-BETA1/docs/">6.0beta</option>
-				<option value="https://ccl.northwestern.edu/netlogo/5.3.1/docs/">5.3.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/5.2.1/docs/">5.2.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/5.1.0/docs/">5.1.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/5.0/docs/">5.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/4.1/docs/">4.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/4.0/docs/">4.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/3.1/docs/">3.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/3.0/docs/">3.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/2.1/docs/">2.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/2.0/docs/">2.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/1.2/docs/">1.2</option>
-				<option value="https://ccl.northwestern.edu/netlogo/1.1/docs/">1.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/1.0/docs/">1.0</option>
+				<option value="6.4.0">6.4</option>
+				<option value="6.3.0">6.3.0</option>
+				<option value="6.2.2">6.2.2</option>
+				<option value="6.1.1">6.1.1</option>
+				<option value="6.0.4">6.0.4</option>
+				<option value="6.0-BETA1">6.0beta</option>
+				<option value="5.3.1">5.3.1</option>
+				<option value="5.2.1">5.2.1</option>
+				<option value="5.1.0">5.1.0</option>
+				<option value="5.0">5.0</option>
+				<option value="4.1">4.1</option>
+				<option value="4.0">4.0</option>
+				<option value="3.1">3.1</option>
+				<option value="3.0">3.0</option>
+				<option value="2.1">2.1</option>
+				<option value="2.0">2.0</option>
+				<option value="1.2">1.2</option>
+				<option value="1.1">1.1</option>
+				<option value="1.0">1.0</option>
 			</select>
 			<button class="navbar__action hidden" id="searchBtn" aria-label="Search (⌘K)">
 				<!-- Search icon -->
