--- a/7.0.0-beta2/r.html
+++ b/7.0.0-beta2/r.html
@@ -13,8 +13,9 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png" />
 		<meta name="apple-mobile-web-app-title" content="Docs" />
 		<link rel="manifest" href="favicon/site.webmanifest" />
+	</head>
 	<body>
-	<!------------  NAV  ------------>
+<!------------  NAV  ------------>
 <nav class="navbar">
 	<input id="menu-toggle" type="checkbox" hidden />
 	<div class="navbar__row">
@@ -266,25 +267,25 @@
 			<!-- Version / Actions -->
 			<select id="version-select" class="version-select" aria-label="Select version">
 				<option selected value="this">7.0.0-beta2</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.4.0/docs/">6.4</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.3.0/docs/">6.3.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.2.2/docs/">6.2.2</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.1.1/docs/">6.1.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.0.4/docs/">6.0.4</option>
-				<option value="https://ccl.northwestern.edu/netlogo/6.0-BETA1/docs/">6.0beta</option>
-				<option value="https://ccl.northwestern.edu/netlogo/5.3.1/docs/">5.3.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/5.2.1/docs/">5.2.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/5.1.0/docs/">5.1.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/5.0/docs/">5.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/4.1/docs/">4.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/4.0/docs/">4.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/3.1/docs/">3.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/3.0/docs/">3.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/2.1/docs/">2.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/2.0/docs/">2.0</option>
-				<option value="https://ccl.northwestern.edu/netlogo/1.2/docs/">1.2</option>
-				<option value="https://ccl.northwestern.edu/netlogo/1.1/docs/">1.1</option>
-				<option value="https://ccl.northwestern.edu/netlogo/1.0/docs/">1.0</option>
+				<option value="6.4.0">6.4</option>
+				<option value="6.3.0">6.3.0</option>
+				<option value="6.2.2">6.2.2</option>
+				<option value="6.1.1">6.1.1</option>
+				<option value="6.0.4">6.0.4</option>
+				<option value="6.0-BETA1">6.0beta</option>
+				<option value="5.3.1">5.3.1</option>
+				<option value="5.2.1">5.2.1</option>
+				<option value="5.1.0">5.1.0</option>
+				<option value="5.0">5.0</option>
+				<option value="4.1">4.1</option>
+				<option value="4.0">4.0</option>
+				<option value="3.1">3.1</option>
+				<option value="3.0">3.0</option>
+				<option value="2.1">2.1</option>
+				<option value="2.0">2.0</option>
+				<option value="1.2">1.2</option>
+				<option value="1.1">1.1</option>
+				<option value="1.0">1.0</option>
 			</select>
 			<button class="navbar__action hidden" id="searchBtn" aria-label="Search (⌘K)">
 				<!-- Search icon -->
@@ -535,7 +536,7 @@ menu.</p>
 <p>Please read the notes at the top of the output text area after opening the shell!
 On Linux OS it can happen that you see an error message from X11. Please check, if
 everything worked correcly. If so, you can ignore these messages. If not, please write a
-report to <a href="m&#97;&#105;l&#116;o&#58;&#98;&#117;&#x67;&#x73;&#x40;&#x63;&#x63;&#108;&#46;&#110;&#111;&#114;&#x74;&#x68;&#119;e&#x73;&#116;&#x65;&#x72;n&#x2e;&#101;&#x64;u">&#x62;&#117;&#103;&#115;@&#x63;&#99;&#108;&#46;&#x6e;&#111;&#114;&#x74;&#104;&#x77;e&#x73;&#116;&#x65;&#x72;&#110;&#46;&#x65;&#100;&#x75;</a> or <a href="https://github.com/NetLogo/R-Extension/issues" target="_blank">open an issue</a>.</p>
+report to <a href="&#109;a&#x69;&#108;&#x74;&#x6f;&#58;&#x62;&#117;&#x67;s&#64;&#99;&#99;&#108;&#46;n&#111;&#x72;&#116;&#104;&#x77;&#x65;s&#116;&#x65;&#114;&#x6e;&#46;ed&#x75;">&#98;&#x75;&#x67;&#115;&#64;&#99;&#x63;&#108;.&#x6e;&#x6f;&#114;&#x74;&#x68;w&#101;&#x73;&#x74;&#101;&#114;&#110;&#46;&#101;&#x64;&#x75;</a> or <a href="https://github.com/NetLogo/R-Extension/issues" target="_blank">open an issue</a>.</p>
 <h4><a href="#environments-in-the-r-extension" id="environments-in-the-r-extension" class="section-anchor">Environments In the R Extension</a></h4>
 <p>When you load a model the R-Extension creates a new R environment. When you create an R
 variable using the R-Extension, this variable is created in the local R environment.
@@ -970,7 +971,7 @@ Please use absolute path to any files in R instead of changing the working direc
 <li>Ensure that rJava (0.9-8 or later) is installed in R. Ensure that it&rsquo;s installed either system-wide or for you as a user</li>
 <li>Ensure that your configuration points to the proper rJava location. If you have a <code>user.properties</code> file, ensure that <code>jri.home.paths</code> includes the path given by R when you run <code>system.file(&quot;jri&quot;,package=&quot;rJava&quot;)</code></li>
 <li>Error #03: Cannot load rJava libraries. This may indicate a corrupted rJava installation. Try reinstalling rJava.</li>
-<li>Error #04: Error in R-Extension. This is an unknown initialization error. Ensure that you are running R 3.0.0 or later and have the rJava extension installed (version 0.9-8 or later). Please report this error to <a href="m&#x61;&#105;l&#x74;o&#x3a;&#x62;&#117;&#x67;s&#x40;&#99;&#x63;&#108;&#x2e;no&#x72;&#116;h&#119;e&#x73;&#116;&#x65;&#x72;&#x6e;.&#x65;&#x64;&#117;">bu&#x67;&#x73;&#64;&#99;&#x63;&#x6c;&#x2e;&#x6e;&#x6f;rt&#x68;w&#101;&#115;&#x74;er&#x6e;.&#x65;&#100;&#117;</a> or open a new issue on <a href="https://github.com/NetLogo/R-Extension/issues" target="_blank">the R-Extension issue tracker</a>.</li>
+<li>Error #04: Error in R-Extension. This is an unknown initialization error. Ensure that you are running R 3.0.0 or later and have the rJava extension installed (version 0.9-8 or later). Please report this error to <a href="&#x6d;&#x61;&#x69;&#108;&#116;&#111;&#58;&#98;&#117;&#103;s@cc&#108;.&#110;&#x6f;r&#116;&#x68;w&#101;s&#116;&#101;&#114;&#110;&#46;&#101;&#x64;u">&#98;&#x75;g&#x73;&#64;&#x63;&#99;&#x6c;&#x2e;n&#x6f;&#114;&#116;&#x68;&#119;&#x65;&#115;te&#114;&#110;&#46;e&#x64;&#117;</a> or open a new issue on <a href="https://github.com/NetLogo/R-Extension/issues" target="_blank">the R-Extension issue tracker</a>.</li>
 <li>Error #05: There was an error setting <code>R_HOME</code>. Check your user.properties file to ensure that r.home specifies a valid path to the R extension. You may also be able to work around this error by setting the <code>R_HOME</code> environment variable. If this error persists, please report it!</li>
 <li>Error #06: Cannot load R libraries. This may indicate a corrupted or improperly configured R installation. If you&rsquo;re certain that your R installation is fine, please report this as an issue.</li>
 </ul>
