minor(7.00-beta2): fix issue with brand size on mobile

--- a/7.0.0-beta2/faq.html
+++ b/7.0.0-beta2/faq.html
@@ -673,7 +673,7 @@ colored blocks.</p>
 or (at your option) any later version.</p>
 <p>Commercial licenses are also available. To inquire about commercial licenses,
 please contact Uri Wilensky at
-<a href="mailto:netlogo-commercial-admin@ccl.northwestern.edu"><a href="&#x6d;&#x61;i&#108;&#x74;&#111;:&#110;&#x65;&#116;l&#x6f;&#x67;o&#45;&#x63;&#x6f;&#109;m&#x65;r&#99;&#x69;&#x61;&#x6c;&#x2d;&#97;d&#109;&#105;&#x6e;&#x40;&#x63;&#x63;&#108;&#x2e;&#x6e;&#111;&#114;th&#x77;&#x65;&#x73;&#116;&#101;&#114;&#x6e;&#46;&#101;&#100;&#x75;">&#110;&#x65;&#116;&#108;&#111;&#x67;&#x6f;&#45;&#x63;&#111;&#109;&#x6d;&#x65;&#x72;&#x63;&#x69;&#x61;&#108;&#x2d;a&#x64;&#x6d;i&#110;@&#x63;c&#x6c;&#x2e;&#x6e;&#111;r&#x74;&#104;w&#101;&#x73;t&#101;&#114;n&#x2e;&#x65;&#x64;&#117;</a></a>.</p>
+<a href="mailto:netlogo-commercial-admin@ccl.northwestern.edu"><a href="&#x6d;&#x61;&#105;&#x6c;&#116;&#x6f;&#x3a;&#x6e;&#101;&#x74;&#108;o&#103;&#111;-&#99;o&#109;&#x6d;&#101;&#114;&#x63;i&#x61;&#x6c;&#45;&#97;&#x64;&#109;i&#x6e;&#64;&#99;&#99;&#108;&#46;&#x6e;&#x6f;&#x72;&#116;&#x68;&#x77;&#101;&#115;&#x74;&#101;r&#x6e;&#x2e;&#x65;&#100;u">&#x6e;e&#x74;&#x6c;&#x6f;&#x67;o&#45;&#99;&#111;&#109;&#x6d;&#101;&#x72;&#x63;i&#x61;&#x6c;&#45;&#97;&#x64;m&#105;&#x6e;&#x40;&#99;&#x63;&#108;&#x2e;&#110;&#111;&#x72;&#x74;h&#119;&#x65;&#115;&#x74;e&#x72;&#110;&#x2e;&#101;&#100;u</a></a>.</p>
 <p>The source code is
 <a href="https://github.com/NetLogo/NetLogo" target="_blank">on GitHub, here</a>. Development discussion is
 on the <a href="https://groups.google.com/group/netlogo-devel" target="_blank">netlogo-devel</a> group.</p>
